--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,114 @@
+
+
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Carlos's R Markdown homework"
+
 ---
+load data
+```{r}
+data<-read.csv('activity.csv')
+```
+
+caculate the total steps by day:
+```{r}
+
+tsd<-aggregate(data$steps,by=list(date=data$date), FUN=sum,na.rm=TRUE)
+```
+
+the histogram of total steps per day:
+```{r 1}
+        
+hist(tsd[,2],xlab="steps",ylab='days',main='Histogram of total steps per day')
+```
+
+the mean of the total number of steps taken per day:
+```{r}
+mean(tsd[,2])
+
+```
+the median of the total number of steps taken per day:
+```{r}
+
+median(tsd[,2])
+```
+
+the average daily activity pattern:
+```{r 2}
+ asi<-aggregate(data$steps,by=list(interval=data$interval), FUN=mean,na.rm=TRUE)
+ plot(asi,type='l',xlab='5-minute interval',ylab='averaged steps',main='the average daily activity pattern')
+```
+
+The 5-minute interval,on average across all the days in the dataset, contains the maximum number of steps is:
+```{r}
+asi[which.max(asi[,2]),1]
+
+```
+
+the total number of rows with NAs:
+```{r}
+sum(is.na(data$steps))
+```
+
+use the mean steps of that interval to replace the NA value and create a new dataset like this:
+
+```{r} 
+ndata<-data;
+for(i in 1:nrow(ndata)){
+        if(is.na(ndata[i,1])=='TRUE'){
+                ndata[i,1]<-asi[which(ndata[i,'interval']==asi$interval),2]
+        }
+}
+
+```
+
+caculate the new total steps by day:
+```{r}
+
+ntsd<-aggregate(ndata$steps,by=list(date=ndata$date), FUN=sum,na.rm=TRUE)
+```
+
+the histogram of new total steps per day:
+```{r 3}
+        
+hist(ntsd[,2],xlab="steps",ylab='days',main='Histogram of total steps per day after na repalced')
+```
+
+the mean of the total number of steps taken per day after nareplaced:
+```{r}
+mean(ntsd[,2])
+
+```
+the median of the total number of steps taken per day nareplaced:
+```{r}
+median(ntsd[,2])
+```
+
+Create a new factor variable in the dataset with two levels 'weekday','weekend':
+```{r}
+        
+   weeks<-weekdays(Sys.Date()+1:5)
+   weekfacors<-factor()
+ndata[,'weekfactor']<-0;
+   for(i in 1:nrow(ndata)){
+        if(weekdays(as.Date(ndata[i,'date'])) %in% weeks=='TRUE'){
+              
+               ndata[i,'weekfactor']<-'weekday'
+                
+        }else{
+                ndata[i,'weekfactor']<-'weekend'
+                
+        }
+        
+}
+  ndata$weekfactor<- as.factor(ndata$weekfactor)
 
 
-## Loading and preprocessing the data
+```
 
-
-
-## What is mean total number of steps taken per day?
-
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
+the plot of the two :
+```{r 4}
+library('lattice');
+         asiw<-aggregate(ndata$steps,by=list(interval=ndata$interval,week=ndata$weekfactor), FUN=mean)
+  
+xyplot(asiw$x~asiw$interval|asiw$week,type='l',layout=c(1,2),xlab='interval',ylab='steps')
+```
